Исправлена функциональность модального окна и улучшены стили формы

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,56 +50,56 @@
                 </div>
                 <form id="requestForm" onsubmit="handleRequestSubmit(event)">
                     <div class="form-group">
-                        <label>Дата закрытия</label>
-                        <input type="date" name="closeDate" required>
+                        <label for="closeDate">Дата закрытия</label>
+                        <input type="date" id="closeDate" name="closeDate" required>
                     </div>
                     <div class="form-group">
-                        <label>Дата отгрузки</label>
-                        <input type="date" name="shipmentDate" required>
+                        <label for="shipmentDate">Дата отгрузки</label>
+                        <input type="date" id="shipmentDate" name="shipmentDate" required>
                     </div>
                     <div class="form-group">
-                        <label>Логист</label>
-                        <input type="text" name="logistician" required>
+                        <label for="logistician">Логист</label>
+                        <input type="text" id="logistician" name="logistician" required>
                     </div>
                     <div class="form-group">
-                        <label>Дата выгрузки</label>
-                        <input type="date" name="unloadingDate" required>
+                        <label for="unloadingDate">Дата выгрузки</label>
+                        <input type="date" id="unloadingDate" name="unloadingDate" required>
                     </div>
                     <div class="form-group">
-                        <label>ФИО водителя</label>
-                        <input type="text" name="driverName" required>
+                        <label for="driverName">ФИО водителя</label>
+                        <input type="text" id="driverName" name="driverName" required>
                     </div>
                     <div class="form-group">
-                        <label>Номер телефона</label>
-                        <input type="tel" name="phoneNumber" required>
+                        <label for="phoneNumber">Номер телефона</label>
+                        <input type="tel" id="phoneNumber" name="phoneNumber" required>
                     </div>
                     <div class="form-group">
-                        <label>Тип груза</label>
-                        <input type="text" name="cargoType" required>
+                        <label for="cargoType">Тип груза</label>
+                        <input type="text" id="cargoType" name="cargoType" required>
                     </div>
                     <div class="form-group">
-                        <label>Госномер авто</label>
-                        <input type="text" name="vehicleNumber" required>
+                        <label for="vehicleNumber">Госномер авто</label>
+                        <input type="text" id="vehicleNumber" name="vehicleNumber" required>
                     </div>
                     <div class="form-group">
-                        <label>Направление</label>
-                        <input type="text" name="direction" required>
+                        <label for="direction">Направление</label>
+                        <input type="text" id="direction" name="direction" required>
                     </div>
                     <div class="form-group">
-                        <label>Фрахт нам</label>
-                        <input type="number" name="ourFreight" required>
+                        <label for="ourFreight">Фрахт нам</label>
+                        <input type="number" id="ourFreight" name="ourFreight" required>
                     </div>
                     <div class="form-group">
-                        <label>Фрахт водителю</label>
-                        <input type="number" name="driverFreight" required>
+                        <label for="driverFreight">Фрахт водителю</label>
+                        <input type="number" id="driverFreight" name="driverFreight" required>
                     </div>
                     <div class="form-group">
-                        <label>Налог</label>
-                        <input type="number" name="tax" required>
+                        <label for="tax">Налог</label>
+                        <input type="number" id="tax" name="tax" required>
                     </div>
                     <div class="form-group">
-                        <label>Офис</label>
-                        <input type="text" name="office" required>
+                        <label for="office">Офис</label>
+                        <input type="text" id="office" name="office" required>
                     </div>
                     <button type="submit" class="submit-button">Создать заявку</button>
                 </form>
